<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_apellido"
        android:inputType="text"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_edad"
        android:inputType="number"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="46dp" />

    <EditText
        android:id="@+id/txtdomicilio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_domicilio"
        android:inputType="text"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:inputType="phone"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_guardar"
            android:textColor="#FBFAFA"
            android:textColorHint="#FFFDFD"
            android:textColorLink="#0C29C8"
            android:textSize="24sp" />
    </TableRow>

</LinearLayout>